# paste-eater

./: Cargo.toml  Dockerfile  LICENSE  README.md  build.sh
paste-eater-frontend/: .env.development  package-lock.json  package.json
paste-eater-frontend/config/: webpack.config.js
paste-eater-frontend/public/: index.html
paste-eater-frontend/src/: App.js  EditorThemes.js  Layout.js  index.js
paste-eater-frontend/src/components/: Topbar.js
paste-eater-frontend/src/pages/: Home.js  Paste.js
resources/: Rocket.toml
src/: args.rs  config.rs  error.rs  main.rs  paste.rs
src/server/: app.rs  endpoints.rs  mod.rs
