[package]
name = "paste-eater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.4"
serde = "1.0.189"
serde_derive = "1.0.189"
directories = "5.0.1"
clap = { version = "4.4.7", features = ["derive"] }
rocket = { version = "0.5.0-rc.3", features = ["tls", "json"] }
rand = "0.8.5"
chrono = "0.4.31"
lz4_flex = "0.11.1"

